Fixed vertical align of change icons.

--- a/app/assets/stylesheets/components/changeIcon.scss
+++ b/app/assets/stylesheets/components/changeIcon.scss
@@ -3,9 +3,12 @@
   height: 100%;
   max-width: 100%;
   max-height: 100%;
-  vertical-align: -60%;
 }
 
-.changeIcon.mod-no-vertical-align {
-  vertical-align: none;
+.changeIcon.mod-external-indicator-chart {
+  vertical-align: -14%;
+}
+
+.changeIcon.mod-homepage-reforms {
+  vertical-align: text-top;
 }
