--- a/app/assets/stylesheets/components/chartIndexes.scss
+++ b/app/assets/stylesheets/components/chartIndexes.scss
@@ -20,12 +20,14 @@
         font-size: 3rem;
         font-weight: 600;
         margin-right: -1px;
+        vertical-align: middle;
       }
 
       .chartIndexes-item-values-change {
         display: inline-block;
         width: 3rem;
         height: 3rem;
+        vertical-align: middle;
       }
 
       .chartIndexes-item-tooltip-heading {
